--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,5 +11,7 @@ include_directories("C:/Sfmlvscode/SFML-2.5.1/include" "include")
 
 add_executable(Therogueswoods src/main.cpp src/utils.cpp include/statemanager.hpp
 src/game.cpp src/statemanager.cpp include/state.hpp src/button.cpp include/configs.hpp include/interface_element.hpp src/game_state.cpp src/console.cpp src/player_input.cpp
-src/map.cpp src/node.cpp include/node.hpp src/quest.cpp src/option.cpp src/quest_option.cpp include/utils.hpp)
+src/map.cpp src/node.cpp include/node.hpp src/quest.cpp src/option.cpp src/quest_option.cpp include/utils.hpp src/quest_pop_up.cpp
+src/strategy.cpp include/strategy.hpp src/quest_menu.cpp include/quest_menu.hpp include/game_state.hpp src/default_strategy.cpp
+src/strategy_for_quest.cpp)
 target_link_libraries(Therogueswoods sfml-system sfml-window sfml-graphics sfml-network sfml-audio)
